--- a/opening_style.css
+++ b/opening_style.css
@@ -1,4 +1,33 @@
 /* STYLING */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Space Mono', monospace;
+  color: #ffffff;
+  background-color: #C96349;
+  transform: translateX(-100%);
+  animation: slideIn 0.8s ease-in-out forwards;
+  overflow-x: hidden;
+  
+}
+
+@keyframes slideIn {
+  to {
+    transform: translateX(0);
+  }
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 0;
+
+  line-height: 1.2;
+}
+
+p {
+  font-size: 1.1rem;
+  margin: 0 0 2rem;
+}
 
 .emoji-wrapper {
   height: 100vh;
@@ -6,20 +35,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom right, #e0f7fa, #ffffff);
+  background-color:#F79E70 ;
   text-align: center;
-  padding: 2rem;
+  
 }
 
 .emoji-options {
   display: flex;
   gap: 1.5rem;
-  margin-top: 1.5rem;
   flex-wrap: wrap;
 }
 
 .emoji-btn {
-  font-size: 3rem;
+  font-size: 2.5rem;
   background: none;
   border: none;
   cursor: pointer;
@@ -29,6 +57,8 @@
 .emoji-btn:hover {
   transform: scale(1.2);
 }
+
+
 
 
 /* INTERACTION JAVASCRIPT  */
