--- a/quiz_6_other.css
+++ b/quiz_6_other.css
@@ -224,3 +224,27 @@ pointer-events: auto;
   background-color: #8EAE96;
   transform: scale(0.9);
 }
+
+/*  EMOJI animation */
+.animation-layer {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1000;
+  
+  pointer-events: none;
+}
+
+.leaf, .light, .cloud {
+  position: absolute;
+  font-size: 1.5rem;
+  animation: float 6s linear infinite;
+  opacity: 0.8;
+}
+
+@keyframes float {
+  from { transform: translateY(100vh); opacity: 1; }
+  to { transform: translateY(70vh); opacity: 0; }
+} 
